Always show scrollbar to prevent jumping

--- a/frontend/static/frontend/style.css
+++ b/frontend/static/frontend/style.css
@@ -4,6 +4,9 @@ body {
   background-color: #000;
   color: white; }
 
+html {
+  overflow-y: scroll; }
+
 .top-margin {
   margin-top: 1em; }
 
